修改错别字

--- a/notes/原子类.md
+++ b/notes/原子类.md
@@ -14,7 +14,7 @@
 
 3. 引用类型:
     - AtomicReference
-    - AtomicStampedRerence（<Object,int>结构）
+    - AtomicStampedReference（<Object,int>结构）
     - AtomicMarkableReference （<Object,Boolean>结构）
 
 4. 对象的属性修改类型:
