--- a/notes/并发容器.md
+++ b/notes/并发容器.md
@@ -31,5 +31,23 @@
 ##### ArrayBlockingQueue
 
 - 数组实现的线程安全的有界的阻塞队列。
--
+- 通过两个 Condition (notEmpty和notFull) 实现对 ArrayBlockingQueue 更精确的访问
+
+##### LinkedBlockingQueue
+
+- 单向链表实现的线程安全的阻塞队列
+- 因为内部生产和消费用的是两个锁，所以数据吞吐量可能会更大，但是插入或删除元素时会产生或销毁 Node  对象实例，在高并发系统中，可能会对 gc 产生影响，具体性能需要实际测试
+
+##### LinkedBlockingDeque
+
+- 双向链表实现的线程安全的双向阻塞队列
+- 和 ABQ 一样，一个锁两个条件
+
+##### ConcurrentLinkedQueue
+
+- 单向链表实现的线程安全的非阻塞队列
+- 原理： volatile 和 CAS 自旋
+- 不加锁(CAS)的方式实现的队列都是无界的
+
+
 
