增加 并发容器 笔记

--- a/notes/并发容器.md
+++ b/notes/并发容器.md
@@ -49,5 +49,7 @@
 - 原理： volatile 和 CAS 自旋
 - 不加锁(CAS)的方式实现的队列都是无界的
 
+#### 队列选择
 
+如果不需要阻塞队列（不需要有界？），优先选择 ConcurrentLinkedQueue；如果需要阻塞队列，队列大小固定优先选择 ArrayBlockingQueue，队列大小不固定优先选择 LinkedBlockingQueue；如果需要对队列进行排序，选择 PriorityBlockingQueue；如果需要一个快速交换的队列，选择 SynchronousQueue；如果需要对队列中的元素进行延时操作，则选择 DelayQueue。
 
